Added emails page, restyled

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenny Johnson Designer/Developer</title>
+    <link rel="stylesheet" href="reveal.css">
     <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -22,15 +23,15 @@
         <nav class="main-nav">
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Portfolio</a></li>
+                <li><a href="projects.html">Projects</a></li>
 
             </ul>
         </nav>
     </header>
 
-    <main >
-        <h1 class="name-logo slide-anim"><a href="/">Kenny Johnson</a></h1>
-        <h2 class="sub-heading"> Web Designer/Developer </h2>
+    <main class="container reveal">
+        <h1 class="name-logo slide-anim bounce-7"><a href="/">Kenny Johnson</a></h1>
+        <h2 class="sub-heading"> Designer/Developer </h2>
         <div class="coffee-text-container">
             <br>
             <hr><br>
@@ -38,7 +39,7 @@
                 <a class="coffee-link" href="projects.html"><i class="material-icons md-48">coffee_maker</i></a>
                 <ul>
                 </ul>
-                <h3 class="coffee-text">Hi, I'm Kenny and I like making fun and interesting websites for people. </h3>
+                <h3 class="coffee-text">Hi, I'm Kenny and I like making coffee and fun websites. Take a look around! I work mostly with Javascript and I am currently learning React. </h3>
                 <br>
                 <br>
                 <hr>
@@ -54,7 +55,7 @@
                     <p class="about-text">
                     </p><br>
     
-                    <p class="about-text">This is some text.</p>
+                    <p class="about-text"></p>
                 </div>
             </div>
 
@@ -70,6 +71,7 @@
         </a>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
