--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewproj" content="width=device-width, initial-scale=1.0">
     <title>Kenny Johnson Designer/Developer</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home/About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-              
+
             </ul>
         </nav>
     </header>
@@ -31,10 +31,12 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="proj-wrapper">
-            <h2 class="proj-title">DSCOVR/ACE 3D Satellite  Visualizer 
+            <h2 class="proj-title">DSCOVR/ACE 3D Satellite Visualizer
             </h2>
             <hr>
-            <p class="proj-text">Roast my commits 🔥</p>
+            <p class="proj-text">Realtime data pulled from NASA public API.<br>
+                Made with Highcharts.js.
+            </p>
             <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
                     class="proj-img" src="imgs/visualizer.png" /></a>
             <div class="proj-text-wrapper">
@@ -42,11 +44,13 @@
             </div>
         </section>
         <section class="proj-wrapper">
-            <h2 class="proj-title">Bookshelf</h2>
+            <h2 class="proj-title">Example Emails
+            </h2>
             <hr>
-            <p class="proj-text">Got books?</p>
-            <a href="bookshelf2/index2.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
-                    class="proj-img" src="bookshelf2/img/bookshelf-bg.jpg" /></a>
+            <p class="proj-text"> Made using HTML, CSS and Javascript
+            </p>
+            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+                    class="proj-img" src="imgs/music-shop-email-example.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
@@ -57,6 +61,16 @@
             <p class="proj-text">Get those moles</p>
             <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="mole lawn house"
                     class="proj-img" src="imgs/mole-bg.jpeg" /></a>
+            <div class="proj-text-wrapper">
+                <p class="proj-text"></p>
+            </div>
+        </section>
+        <section class="proj-wrapper">
+            <h2 class="proj-title">Bookshelf</h2>
+            <hr>
+            <p class="proj-text">Got books?</p>
+            <a href="bookshelf2/index2.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+                    class="proj-img" src="bookshelf2/img/bookshelf-bg.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
@@ -86,7 +100,7 @@
             <p class="proj-text">This is Lashonda and she's a cat too. </p>
             <img alt="intense torti cat staring at camera" class="proj-img" src="imgs/kitty2.jpeg" />
             <div class="proj-text-wrapper">
-                </div>
+            </div>
         </section>
     </main>
 
