Updated emails link

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="main-nav">
             <ul class="horizontal nav-list">
-                <li><a href="index.html">Home/About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
@@ -48,7 +48,7 @@
             <hr>
             <p class="proj-text"> Made using HTML, CSS and Javascript
             </p>
-            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+            <a href="emails.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
                     class="proj-img" src="imgs/music-shop-email-example.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
