--- a/emails.html
+++ b/emails.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="main-nav">
             <ul class="horizontal nav-list">
-                <li><a href="index.html">Home/About</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
               
             </ul>
