--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
             <p class="proj-text">Realtime data pulled from NASA public API.<br>
                 Made with Highcharts.js.
             </p>
-            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
                     class="proj-img" src="imgs/visualizer.png" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
@@ -48,7 +48,7 @@
             <hr>
             <p class="proj-text"> Made using HTML, CSS and Javascript
             </p>
-            <a href="emails.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+            <a href="emails.html"><img alt="example email"
                     class="proj-img" src="imgs/music-shop-email-example.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
