Project texts updated

--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,8 @@
             <h2 class="proj-title">DSCOVR/ACE 3D Satellite Visualizer
             </h2>
             <hr>
-            <p class="proj-text">Realtime data pulled from NASA public API.<br>
-                Made with Highcharts.js.
+            <p class="proj-text">Realtime data pulled from NASA public API<br>
+                Made with Highcharts.js
             </p>
             <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
                     class="proj-img" src="imgs/visualizer.png" /></a>
@@ -46,7 +46,7 @@
             <h2 class="proj-title">Example Emails
             </h2>
             <hr>
-            <p class="proj-text"> Made using HTML, CSS and Javascript
+            <p class="proj-text"> Made using HTML and CSS
             </p>
             <a href="emails.html"><img alt="example email"
                     class="proj-img" src="imgs/music-shop-email-example.jpg" /></a>
@@ -57,7 +57,9 @@
         <section class="proj-wrapper">
             <h2 class="proj-title">Whack-A-Mole</h2>
             <hr>
-            <p class="proj-text">Get those moles</p>
+            <p class="proj-text">Get those moles <br>
+            Made with vanilla Javascript
+            </p>
             <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="mole lawn house"
                     class="proj-img" src="imgs/mole-bg.jpeg" /></a>
             <div class="proj-text-wrapper">
