--- a/emails.html
+++ b/emails.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewproj" content="width=device-width, initial-scale=1.0">
-    <title>Kenny Johnson Designer/Developer</title>
+    <title>Kenny Johnson ␥ Designer ⇥ Developer</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
