--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewproj" content="width=device-width, initial-scale=1.0">
-    <title>Kenny Johnson Designer/Developer</title>
+    <title>Kenny Johnson ␥ Designer ⇥ Developer</title>
     <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +23,7 @@
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="art.html">Art</a></li>
             </ul>
         </nav>
     </header>
