Major refactor, added coffee cup and art photo

--- a/art.html
+++ b/art.html
@@ -38,7 +38,7 @@
                 
             </p>
             <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
-                    class="proj-img" src="imgs/visualizer.png" /></a>
+                    class="proj-img" src="sketches/116th-and-Broadway-NYC-lo-res.jpeg"></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
