--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
             <p class="proj-text">Realtime data pulled from NASA public API<br>
                 Made with Highcharts.js
             </p>
-            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
-                    class="proj-img" src="imgs/visualizer.png" /></a>
+            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img
+                    alt="satellite visualizer" class="proj-img" src="imgs/visualizer.png" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
@@ -49,8 +49,8 @@
             <hr>
             <p class="proj-text"> Made using HTML and CSS
             </p>
-            <a href="emails.html"><img alt="example email"
-                    class="proj-img" src="imgs/music-shop-email-example.jpg" /></a>
+            <a href="emails.html"><img alt="example email" class="proj-img"
+                    src="imgs/music-shop-email-example.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
@@ -59,7 +59,7 @@
             <h2 class="proj-title">Whack-A-Mole</h2>
             <hr>
             <p class="proj-text">Get those moles <br>
-            Made with vanilla Javascript
+                Made with vanilla Javascript
             </p>
             <a href="mole/index.html" target="_blank" rel="noopener noreferrer"><img alt="mole lawn house"
                     class="proj-img" src="imgs/mole-bg.jpeg" /></a>
@@ -71,8 +71,9 @@
             <h2 class="proj-title">Bookshelf</h2>
             <hr>
             <p class="proj-text">Got books?</p>
-            <a href="bookshelf2/index2.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
-                    class="proj-img" src="bookshelf2/img/bookshelf-bg.jpg" /></a>
+            <p class="proj-text">Made with Vanilla Javascript</p>
+            <a href="bookshelf/index.html" target="_blank" rel="noopener noreferrer"><img alt="bookshelf"
+                    class="proj-img" src="bookshelf/img/bookshelf-bg.jpg" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
