--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/style.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenny Johnson ␥ Designer ⇥ Developer</title>
 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="coffee-animation.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="icon" type="image/x-icon" href="/imgs/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -34,41 +37,66 @@
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <h2 class="sub-heading"> Designer/Developer </h2>
         <div class="coffee-text-container">
-            <br>
-            <hr><br>
-            <figure class="coffee-container">
-
-                <div class="bean-img">
-                    <img src="imgs/bean.png" class="bean-img" alt="bean vector image">
-                </div>
-                <div class="coffee-img">
-                    <img src="imgs/coffee-maker.png" class="coffee-img" alt="coffee maker vector image">
-                </div>
-            </figure>
-
             <h3 class="coffee-text">Hi, I'm Kenny and I like making coffee and fun websites. Take a look around! I
                 work mostly with Javascript and I am currently learning React. </h3>
             <br>
             <br>
-            <hr>
-
             <div class="about-wrapper">
-                <figure class="about-img-bg">
-
+                <div class="about-img-bg">
                     <img alt="portrait photo of kenny with forest background" class="about-img" src="imgs/kenny.jpeg" />
-
-                </figure>
-
+                </div>
+    
                 <div class="about-text-wrapper">
-                    <p class="about-text">
-                    </p><br>
-
-                    <p class="about-text"></p>
+                    <!-- <p class="about-text">asdf</p>             -->
                 </div>
             </div>
-
-
+            <br>
+            <br>
+            <hr>
         </div>
+        <br>
+        <hr><br>
+        <div class="coffee-animation">
+            <div class="saucer">
+            </div>
+            <div class="cup">
+                <div class="top">
+                    <div class="vapour">
+                        <span style="--i:1;"></span>
+                        <span style="--i:3;"></span>
+                        <span style="--i:16;"></span>
+                        <span style="--i:5;"></span>
+                        <span style="--i:13;"></span>
+                        <span style="--i:20;"></span>
+                        <span style="--i:6;"></span>
+                        <span style="--i:7;"></span>
+                        <span style="--i:10;"></span>
+                        <span style="--i:8;"></span>
+                        <span style="--i:17;"></span>
+                        <span style="--i:11;"></span>
+                        <span style="--i:12;"></span>
+                        <span style="--i:14;"></span>
+                        <span style="--i:2;"></span>
+                        <span style="--i:9;"></span>
+                        <span style="--i:15;"></span>
+                        <span style="--i:4;"></span>
+                        <span style="--i:19;"></span>
+                    </div>
+                    <div class="circle">
+                        <div class="coffee"></div>
+                    </div>
+                </div>
+                <div class="handle">
+
+                </div>
+            </div>
+        </div>
+
+
+
+       
+
+
     </main>
 
     <footer>
@@ -80,6 +108,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="coffee.js"></script>
 </body>
 
 </html>
