Update for portfolio

--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -19,9 +19,9 @@
 
   <nav class="nav-bar main">
     <ul>
-      <li><a href="#"> Home </a></li>
-      <li><a href="#"> About </a></li>
-      <li><a href="#"> Contact </a></li>
+      <li><a href="home.html"> Home </a></li>
+      <li><a href="about.html"> About </a></li>
+      <li><a href="contact.html"> Contact </a></li>
     </ul>
   </nav>
 
@@ -51,6 +51,8 @@
 
 
   <!--  USER INPUT Form with text inputs to allow users to create new books and add them to the bookshelf -->
+
+  <h1 class="user-input-header">Create a book!</h1>
 
   <input type="text" onfocus="this.value=''" placeholder="Title" name="user-input-title" value="Title"
     class="userInputTitle">
