Added sketch directory

--- a/art.html
+++ b/art.html
@@ -37,7 +37,7 @@
             <p class="proj-text">I consider sketching a hobby/therapy. Pen or pencil on paper both excites and calms me.<br>
                 
             </p>
-            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
+            <a href="sketches/" target="_blank" rel="noopener noreferrer"><img alt="satellite visualizer"
                     class="proj-img" src="sketches/116th-and-Broadway-NYC-lo-res.jpeg"></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
