Remove fixed, .hidden class was missing

--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -13,7 +13,16 @@
 </head>
 
 <body>
-  
+  <!-- <header>
+    <nav class="main-nav">
+        <ul class="horizontal nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="../projects.html">Projects</a></li>
+            <li><a href="art.html">Art</a></li>
+
+        </ul>
+    </nav>
+</header> -->
 
   <!-- NAVBAR -->
 
@@ -35,8 +44,8 @@
 
     <!-- SORT DROPDOWN -->
 
-
-
+    </section>
+    <section>
     <h1 class="dropdown-header">Sort by:</h1>
 
     <select class="sortBy">
