--- a/bookshelf/about.html
+++ b/bookshelf/about.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bookshelf Data SUBMISSION</title>
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="nav.css">
-  <link rel="stylesheet" href="dropdown.css">
-  <link rel="stylesheet" href="popupform.css">
+  <title>Bookshelf Data</title>
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/dropdown.css">
+  <link rel="stylesheet" href="css/popupform.css">
 </head>
 
 <body>
