--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bookshelf Data SUBMISSION</title>
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="nav.css">
-  <link rel="stylesheet" href="dropdown.css">
-  <link rel="stylesheet" href="popupform.css">
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/dropdown.css">
+  <link rel="stylesheet" href="css/popupform.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
@@ -50,12 +50,11 @@
     <input class="search-input " placeholder="Search">
     <button class="searchBtn">Search</button>
     <br>
-    <!-- VISIBLE BOOKS COUNTER -->
+    <!--  BOOK COUNTERS -->
 
     <h3 class="counter"></h3>
-
+    <h3 class="englishCounter"></h3>
     <br>
-
     <hr>
 
     <!-- SORT DROPDOWN -->
