Added waves and styling

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <ul class="horizontal nav-list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="art.html">Art</a></li>
+                <!-- <li><a href="art.html">Art</a></li> -->
             </ul>
         </nav>
     </header>
@@ -37,7 +37,7 @@
             <p class="proj-text">Realtime data pulled from NASA public API<br>
                 Made with Highcharts.js
             </p>
-            <a href="testbuild-stable/index.html" target="_blank" rel="noopener noreferrer"><img
+            <a href="dscovr-ace-visualizer/index.html" target="_blank" rel="noopener noreferrer"><img
                     alt="satellite visualizer" class="proj-img" src="imgs/visualizer.png" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
