--- a/art.html
+++ b/art.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wave.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewproj" content="width=device-width, initial-scale=1.0">
