Added coffee-counter to projects

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,21 @@
                 <p class="proj-text"></p>
             </div>
         </section>
+
+        <section class="proj-wrapper">
+            <h2 class="proj-title">Coffee Counter Game
+            </h2>
+            <hr>
+            <p class="proj-text">
+                A simple game made with HTML, CSS, and JavaScript<br>
+            </p>
+            <a href="coffee-counter/index.html" target="_blank" rel="noopener noreferrer"><img
+                    alt="satellite visualizer" class="proj-img" src="imgs/coffee-counter.png" /></a>
+            <div class="proj-text-wrapper">
+                <p class="proj-text"></p>
+            </div>
+        </section>
+
         <section class="proj-wrapper">
             <h2 class="proj-title">Example Emails
             </h2>
@@ -55,6 +70,7 @@
                 <p class="proj-text"></p>
             </div>
         </section>
+
         <section class="proj-wrapper">
             <h2 class="proj-title">Whack-A-Mole</h2>
             <hr>
@@ -67,6 +83,7 @@
                 <p class="proj-text"></p>
             </div>
         </section>
+
         <section class="proj-wrapper">
             <h2 class="proj-title">Bookshelf</h2>
             <hr>
@@ -88,6 +105,7 @@
                 <p class="proj-text"></p>
             </div>
         </section>
+
         <section class="proj-wrapper">
             <h2 class="proj-title">Freddie</h2>
             <hr>
@@ -97,6 +115,7 @@
                 <p class="proj-text"></p>
             </div>
         </section>
+
         <section class="proj-wrapper">
             <h2 class="proj-title">Lashonda</h2>
             <hr>
