--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="proj-wrapper">
-            <h2 class="proj-title">DSCOVR/ACE 3D Satellite Visualizer
+            <h2 class="proj-title">3D Satellite Visualizer
             </h2>
             <hr>
             <p class="proj-text">Realtime data pulled from NASA public API<br>
