--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                 A simple game made with HTML, CSS, and JavaScript<br>
             </p>
             <a href="coffee-counter/index.html" target="_blank" rel="noopener noreferrer"><img
-                    alt="satellite visualizer" class="proj-img" src="imgs/coffee-counter.png" /></a>
+                    alt="satellite visualizer" class="proj-img" src="imgs/bean2.png" /></a>
             <div class="proj-text-wrapper">
                 <p class="proj-text"></p>
             </div>
