--- a/coffee-counter/index.html
+++ b/coffee-counter/index.html
@@ -25,7 +25,7 @@
 
 
 
-      <div class="container left">
+      <div class="container left clicker">
         <div class="counter-container">Coffee: <span id="coffee_counter">0</span></div>
         <div class="cps-container"><span id="cps">0</span> coffee/second</div>
         <div id="clicks-per"></div>
@@ -46,14 +46,7 @@
         <section id="current-beans"></section>
       </div>
 
-      <div class="container left beans">
-        <form action="https://www.paypal.com/donate" method="post" target="_top">
-          <img src="PointingHand.gif" alt="">
-          <button id="buy-beans" name="submit" title="PayPal - The safer, easier way to pay online!"
-            alt="Donate with PayPal button"><a target="_blank"
-              href="https://paypal.me/kennymakesmusic?country.x=US&locale.x=en_US">BUY 100 BEANS AND WIN</a></button>
-        </form>
-      </div>
+  
 
     </section>
 
@@ -61,13 +54,21 @@
       <div class="column-header">Coffee Producers</div>
       <div class="container right" id="producer_container">
       </div>
+
+      <div class="container right beans">
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+          <img src="PointingHand.gif" alt="">
+          <button id="buy-beans" name="submit" title="PayPal - The safer, easier way to pay online!"
+            alt="Donate with PayPal button"><a target="_blank"
+              href="https://paypal.me/kennymakesmusic?country.x=US&locale.x=en_US">BUY 100 BEANS AND WIN</a></button>
+        </form>
+      </div>
     </section>
 
 
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </main>
-  <br>
 </body>
 
 </html>
