--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
+  
   <header>
-
     <!-- LOGOS -->
     <div class="logos">
       <img src="imgs/noaa_logo.png" alt="NOAA" class="logo">
@@ -96,14 +96,12 @@
     RLP 0 is at L1
   -->
 
-
     <!-- FOOTER -->
-
     <div class="footer">
       <p>Built by Kenny Johnson 2022</p>
     </div>
 
-    <script src="script3.js"></script>
+    <script src="index.js"></script>
     </div>
   </main>
 </body>
