--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -24,8 +24,12 @@
 <body>
   
   <header>
+    
     <!-- LOGOS -->
+
     <div class="logos">
+      <img src="imgs/DSCOVR-Logo.png" alt="USRA" class="logo">
+      <img src="imgs/ACE_mission_logo.png" alt="USRA" class="logo">
       <img src="imgs/noaa_logo.png" alt="NOAA" class="logo">
       <img src="imgs/nasa_logo.png" alt="NSF" class="logo">
       <img src="imgs/nws_logo.png" alt="USRA" class="logo">
