Updated styling and info copy

--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -52,8 +52,10 @@
       <h2>INFO</h2>
 
       <p>
-        This graph is designed to give a visual representation of the locations of two space weather satellites orbting
-        the sun.
+        This graph is designed to give a visual representation of the locations of two space weather satellites orbting the sun. It uses real-time data from the <a href="https://www.swpc.noaa.gov/products/ace-real-time-solar-wind">NOAA Space Weather Prediction Center</a> and the <a href="https://www.swpc.noaa.gov/products/dscovr-real-time-solar-wind">DSCOVR/ACE</a> satellites. The default view is looking at the satellites from the Earth's perspective, but you can also view the satellites from the Sun's perspective by clicking and dragging. 
+      </p>
+      <p>
+        The mission of the DSCOVR/ACE satellites is to monitor the sun and its effects on Earth. The DSCOVR/ACE satellites are part of the <a href="https://www.swpc.noaa.gov/">NOAA Space Weather Prediction Center</a> and are funded by the <a href="https://www.nasa.gov/">NASA</a>, <a href="https://www.noaa.gov/">NOAA</a>, and <a href="https://www.nsf.gov/">NSF</a>.
       </p>
       <p>
         https://en.wikipedia.org/wiki/Lagrange_point
